Version History
===============


Version 0.9.5 (unreleased)
--------------------------
* Fixed DeprecationWarning: invalid escape sequence (#234, Thanks @jayvdb)
* Fixed typo in documentation (#232, thanks @timgates42)
* Added Kyrgyz translation (#239,thanks @Soyuzbek)
* Ignore translator context hints checking unmatched variables (#238, #239, thanks @jeancochrane and @mondeja)

Version 0.9.4
-------------
* Added ROSETTA_SHOW_OCCURRENCES: Option to hide file name & path (#77, PR #221, thanks @sarathak)
* Unfuzzy fuzzy entries when the translation is changed (#16, PR #220, thanks @sarathak)
* Updated spanish translation (#230, thank you @mondeja)
* Test against Django 3.0 and Python 3.8


Version 0.9.3
-------------
* Added a tooltip to explain fuzzy entries (#206)
* New ROSETTA_LANGUAGES setting allows for translating languages which are not yet in LANGUAGES (#219)
* Fix for duplicate PO files listed on case insensitive filesystems (#47, #52, #218, thanks @malkstar)


Version 0.9.2
-------------
* Cleanup of imports, and use relative imports. Hopefully fixes #209.
* Travis: cleanup and test with Python 3.7


Version 0.9.1
-------------
* Removed old compatibility code for Django < 1.11 (#205, thanks @claudep)
* Allow overriding rosetta login url (#210, thanks @izimobil)
* Test against Django 2.2
* Optional line number in the occurrences column (#215, thanks @pauloxnet)
* Add search in msgctxt (#213, thanks @yakky)
* Strip code tag from Yandex response. (#212, thanks @izimobil)
* Test friendly settings and better tests (#211, thanks @izimobil)
* The reference language didn't work in widows (#189, thanks @pedfercue)


Version 0.9.0
-------------
* Fix `ROSETTA_REQUIRES_AUTH = False` wasn't respected (#203, @BarnabasSzabolcs)
* Django-rosetta now requires Django 1.11 or newer. Rosetta 0.8.3 is the last version to support Django 1.8 through 1.10. (#204, thanks @claudep)


Version 0.8.3
-------------